// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTableColumns returns correct columns for chat widgets 1`] = `
Array [
  "mock name column",
  "mock description column",
  "mock status column",
]
`;

exports[`getTableColumns returns correct columns for custom metrics 1`] = `
Array [
  "mock Metric Type column",
  "mock name column",
  "mock description column",
  "mock status column",
]
`;

exports[`getTableColumns returns correct columns for emailTemplates 1`] = `
Array [
  "mock name column",
  "mock description column",
]
`;

exports[`getTableColumns returns correct columns for lists 1`] = `
Array [
  "mock name column",
  "mock list type column",
  "mock status column",
]
`;

exports[`getTableColumns returns correct columns for outbound identifier list 1`] = `
Array [
  "mock name column",
  "mock description column",
]
`;

exports[`getTableColumns returns correct columns for outbound identifiers 1`] = `
Array [
  "mock name column",
  "mock description column",
]
`;
